# aive-website

./: .gitignore  README.md  generate-api-client.sh
backend/: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml  requirements.txt  run.sh
backend/app/: config.py  database.py  db_service.py  main.py  schemas.py  services.py  video_editor.py
backend/app/adapters/inbound/rest/: project_controller.py
backend/app/adapters/outbound/external_apis/: footage_service_impl.py  transcription_service_impl.py
backend/app/adapters/outbound/file_system/: music_service_impl.py  video_rendering_service_impl.py
backend/app/adapters/outbound/persistence/: music_repository_impl.py  project_repository_impl.py  render_task_repository_impl.py  sentence_repository_impl.py
backend/app/core/application/services/: project_service.py  render_service.py
backend/app/core/domain/: exceptions.py
backend/app/core/domain/entities/: music.py  project.py  render_task.py  sentence.py
backend/app/core/domain/repositories/: music_repository.py  project_repository.py  render_task_repository.py  sentence_repository.py
backend/app/core/domain/services/: footage_service.py  music_service.py  transcription_service.py  video_rendering_service.py
backend/app/infrastructure/: dependency_injection.py
backend/app/infrastructure/database/: models.py
backend/app/infrastructure/dto/: project_dto.py
backend/app/routers/: project.py
backend/app_backup_20250924_203251/: main.py  models.py  services.py
backend/migrations/: env.py
backend/migrations/versions/: 8923831406c5_add_audio_file_path_to_project_model.py
backend/src/: main.py
backend/src/alembic/: env.py  script.py.mako
backend/src/alembic/versions/: 48e4ea81bf4b_.py  e69d918af011_.py
backend/src/base/: config.py  controller.py  repository.py  routes.py
backend/src/database/: session.py
backend/src/projects/: controller.py  models.py  repository.py  routes.py  schemas.py
backend/src/render/: controller.py  models.py  repository.py  routes.py  schemas.py
backend/src/video_processing/: lambda_client.py  s3_client.py  services.py  video_editor.py
backend/tests/: conftest.py
backend/tests/projects/: test_api.py
docker/: backend.Dockerfile  (+3 more)
(+54 files in other folders)
